--- a/index.html
+++ b/index.html
@@ -20,5 +20,8 @@
       <form action="#">
         <input type="submit" id="get-books" value="GET /books">
       </form>
+      <form action="#">
+        <input type="submit" id="get-book" value="GET /book">
+      </form>
     </body>
 </html>
